<resources>
    <string name="app_name">Vision_Recognition</string>

    <string name="text_title">Octopus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_open_camera">Camera</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="btn_take_photo_ok_text">存 储</string>
    <string name="btn_take_photo_cancell_text">放 弃</string>
    <string name="btn_take_photo_ok_text1">存\n储</string>
    <string name="btn_take_photo_cancell_text1">放\n弃</string>
    <string name="btn_select_image_text">选择图片</string>
    <string name="btn_age_test_text">年龄测试</string>
    <string name="btn_face_match_text">开始匹配</string>
    <string name="btn_text_conversion_text">文字识别</string>
    <string name="btn_ar_share_text">分 享</string>
    <string name="cropImage_title">照片裁剪</string>
    <string name="storeImage_title">照片存储</string>
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="done_text">完 成</string>
    <string name="re_take_photo">重 拍</string>
    <string name="save_photo">保 存</string>
    <string name="super_high">超高</string>
    <string name="high">高</string>
    <string name="medium">中</string>
    <string name="low">低</string>
</resources>
